<?xml version="1.0"?>
<package format="2">
  <name>static_obs</name>
  <version>0.0.0</version>
  <description>The static_obs package for static obstacle visualization</description>

  <maintainer email="stark.chen@connect.polyu.hk">tzhj</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>obj_state_msgs</depend>

  <export>
  </export>
</package>
